--- a/CV.html
+++ b/CV.html
@@ -8,73 +8,171 @@
     <title>My CV</title>
     <link rel="stylesheet" href="./src/styles/base.css">
     <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="stylesheet" href="./src/styles/card_style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-        <div id="main">
+    <div id="main">
 
-            <header class="main__header" id="myHeader">
-                <div class="sub__main--header">
-                    <div class="header__logo">
-                        <span class="header__logo--my-name">Thanh Duy</span>
-                    </div>
-                    <div class="header__navbar">
-                        <a href="#introduce">
-                            <span class="header__navbar--text">
-                                Introduce
-                            </span>
-                        </a>
-                        <a href="#skill">
-                            <span class="header__navbar--text">
-                                Skill
-                            </span>
-                        </a>
-                        <a href="#contact--me">
-                            <span class="header__navbar--text">
-                                Contact me
-                            </span>
-                        </a>
-                    </div>
-                    <div class="header__switch--dark-mode">
-                        <input type="checkbox" class="checkbox" id="chk" />
-                        <label class="label" for="chk">
-                            <div class="ball"></div>
-                        </label>
-                    </div>
+        <header class="item1-scroll main__header" id="myHeader">
+            <div class="show--down delay-04 sub__main--header">
+                <div class="header__logo">
+                    <span class="header__logo--my-name">Thanh Duy</span>
                 </div>
-            </header>
+                <div class="header__navbar">
+                    <a href="#introduce">
+                        <span class="header__navbar--text">
+                            Introduce
+                        </span>
+                    </a>
+                    <a href="#skill">
+                        <span class="header__navbar--text">
+                            Skill
+                        </span>
+                    </a>
+                    <a href="#contact--me">
+                        <span class="header__navbar--text">
+                            Contact me
+                        </span>
+                    </a>
+                </div>
+                <div class="header__switch--dark-mode">
+                    <input type="checkbox" class="checkbox" id="chk" />
+                    <label class="label" for="chk">
+                        <div class="ball"></div>
+                    </label>
+                </div>
+            </div>
+        </header>
 
-            <main class="main__content">
+        <main class="main__content">
 
-                <div id="introduce" class="content--card">
-                    <div style="width: 80%; margin: 0 auto;">
-                        <div class="content__introduce col-3">
-                            <span class="text-large-size text-primary">Xin chào !!!</span>
-                            <br>
-                            <span class="text-medium-size text-white tl pr">Tôi là Phạm Thanh Duy, lập trình viên chuyên
-                                về fontend !!!</span>
+            <div id="introduce" class="content--card">
+                <div class="content--card-sub">
+                    <div class="item1-scroll content__introduce col-3">
+                        <span class="show--down delay-02 text-large-size text-primary">Xin chào !!!</span>
+                        <br>
+                        <span class="show--left delay-02 text-medium-size text-white tl pr">Mình là Phạm Thanh Duy, lập
+                            trình viên chuyên
+                            về fontend !!!</span>
+                    </div>
+                    <div class="item1-scroll contend__img col-3">
+                        <img class="show--up delay-02 avatar__img" src="./src/imgs/avatar.jpg" alt="Girl in a jacket">
+                    </div>
+                    <div class="delay-02 col-3">
+                        <div class="item1-scroll content_icon-ss">
+                            <div class="show--right delay-01 btn--ss">
+                                <div class="icon-ss">
+                                    <i class='bx bxl-facebook-circle icon-size'></i>
+                                </div>
+                                <span><a href="https://www.facebook.com/Thanh.Dy1082000/">Thanh.Dy1082000</a></span>
+                            </div>
+                            <div class="show--right delay-02 btn--ss">
+                                <div class="icon-ss">
+                                    <i class='bx bxl-instagram icon-size'></i>
+                                </div>
+                                <span><a href="https://www.instagram.com/_boongmai/">_boongmai</a></span>
+                            </div>
+                            <div class="show--right delay-03 btn--ss">
+                                <div class="icon-ss">
+                                    <i class='bx bxl-github icon-size'></i>
+                                </div>
+                                <span><a href="https://github.com/BoongMai">BoongMai</a></span>
+                            </div>
                         </div>
-                        <div class=" contend__img col-3">
-                            <img class="avatar__img" src="./src/imgs/avatar.jpg" alt="Girl in a jacket">
+                    </div>
+
+                </div>
+                <!-- <div class="introduce--docs">
+                    <span class="introduce--docs-format text-medium-size">
+                        Cảm ơn các bạn đã ghé thăm trang CV của mình :3. Mình hiện đang là lập trình viên Frontend cho
+                        cty Quang Trung Software. Chưa tốt nghiệp đại học tại trường ĐH.Nguyễn Tất Thành :))))).
+                    </span>
+                </div> -->
+            </div>
+
+            <div id="skill" class="content--card item-skill-scroll">
+                <div class="container-card book">
+                    <div class="col-4 skill__items show--up-hard delay-01 page">
+                        <div class="icon_skill page__1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
+                                style="fill: rgba(94, 212, 244, 1);">
+                                <circle cx="12" cy="11.245" r="1.785"></circle>
+                                <path
+                                    d="m7.002 14.794-.395-.101c-2.934-.741-4.617-2.001-4.617-3.452 0-1.452 1.684-2.711 4.617-3.452l.395-.1.111.391a19.507 19.507 0 0 0 1.136 2.983l.085.178-.085.178c-.46.963-.841 1.961-1.136 2.985l-.111.39zm-.577-6.095c-2.229.628-3.598 1.586-3.598 2.542 0 .954 1.368 1.913 3.598 2.54.273-.868.603-1.717.985-2.54a20.356 20.356 0 0 1-.985-2.542zm10.572 6.095-.11-.392a19.628 19.628 0 0 0-1.137-2.984l-.085-.177.085-.179c.46-.961.839-1.96 1.137-2.984l.11-.39.395.1c2.935.741 4.617 2 4.617 3.453 0 1.452-1.683 2.711-4.617 3.452l-.395.101zm-.41-3.553c.4.866.733 1.718.987 2.54 2.23-.627 3.599-1.586 3.599-2.54 0-.956-1.368-1.913-3.599-2.542a20.683 20.683 0 0 1-.987 2.542z">
+                                </path>
+                                <path
+                                    d="m6.419 8.695-.11-.39c-.826-2.908-.576-4.991.687-5.717 1.235-.715 3.222.13 5.303 2.265l.284.292-.284.291a19.718 19.718 0 0 0-2.02 2.474l-.113.162-.196.016a19.646 19.646 0 0 0-3.157.509l-.394.098zm1.582-5.529c-.224 0-.422.049-.589.145-.828.477-.974 2.138-.404 4.38.891-.197 1.79-.338 2.696-.417a21.058 21.058 0 0 1 1.713-2.123c-1.303-1.267-2.533-1.985-3.416-1.985zm7.997 16.984c-1.188 0-2.714-.896-4.298-2.522l-.283-.291.283-.29a19.827 19.827 0 0 0 2.021-2.477l.112-.16.194-.019a19.473 19.473 0 0 0 3.158-.507l.395-.1.111.391c.822 2.906.573 4.992-.688 5.718a1.978 1.978 0 0 1-1.005.257zm-3.415-2.82c1.302 1.267 2.533 1.986 3.415 1.986.225 0 .423-.05.589-.145.829-.478.976-2.142.404-4.384-.89.198-1.79.34-2.698.419a20.526 20.526 0 0 1-1.71 2.124z">
+                                </path>
+                                <path
+                                    d="m17.58 8.695-.395-.099a19.477 19.477 0 0 0-3.158-.509l-.194-.017-.112-.162A19.551 19.551 0 0 0 11.7 5.434l-.283-.291.283-.29c2.08-2.134 4.066-2.979 5.303-2.265 1.262.727 1.513 2.81.688 5.717l-.111.39zm-3.287-1.421c.954.085 1.858.228 2.698.417.571-2.242.425-3.903-.404-4.381-.824-.477-2.375.253-4.004 1.841.616.67 1.188 1.378 1.71 2.123zM8.001 20.15a1.983 1.983 0 0 1-1.005-.257c-1.263-.726-1.513-2.811-.688-5.718l.108-.391.395.1c.964.243 2.026.414 3.158.507l.194.019.113.16c.604.878 1.28 1.707 2.02 2.477l.284.29-.284.291c-1.583 1.627-3.109 2.522-4.295 2.522zm-.993-5.362c-.57 2.242-.424 3.906.404 4.384.825.47 2.371-.255 4.005-1.842a21.17 21.17 0 0 1-1.713-2.123 20.692 20.692 0 0 1-2.696-.419z">
+                                </path>
+                                <path
+                                    d="M12 15.313c-.687 0-1.392-.029-2.1-.088l-.196-.017-.113-.162a25.697 25.697 0 0 1-1.126-1.769 26.028 26.028 0 0 1-.971-1.859l-.084-.177.084-.179c.299-.632.622-1.252.971-1.858.347-.596.726-1.192 1.126-1.77l.113-.16.196-.018a25.148 25.148 0 0 1 4.198 0l.194.019.113.16a25.136 25.136 0 0 1 2.1 3.628l.083.179-.083.177a24.742 24.742 0 0 1-2.1 3.628l-.113.162-.194.017c-.706.057-1.412.087-2.098.087zm-1.834-.904c1.235.093 2.433.093 3.667 0a24.469 24.469 0 0 0 1.832-3.168 23.916 23.916 0 0 0-1.832-3.168 23.877 23.877 0 0 0-3.667 0 23.743 23.743 0 0 0-1.832 3.168 24.82 24.82 0 0 0 1.832 3.168z">
+                                </path>
+                            </svg>
                         </div>
-                        <div class="col-3">
-                            col3
+                        <div class="icon_skill page__2">
+                            <ul style="padding: 20px 20px" >
+                                Một số dự án mình từng làm: <br>
+                                <li>Lotte TSMS</li>
+                                <li>Life on Admin page</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
 
-                <div id="skill" class="content--card">
-                    Skill
+                <div class="container-card book">
+                    <div class="col-4 skill__items show--up-hard delay-02 page">
+                        <div class="icon_skill  page__1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
+                                style="fill: rgba(2, 183, 127, 1);">
+                                <path style="fill: rgba(62, 81, 101, 1);"
+                                    d="m12 12.765 5.592-9.437h-3.276L12 7.33v.002L9.688 3.328h-3.28z"></path>
+                                <path d="M18.461 3.332 12 14.235 5.539 3.332H1.992L12 20.672l10.008-17.34z"></path>
+                            </svg>
+                        </div>
+                        <div class="icon_skill page__2">
+                            <ul style="padding: 20px 20px" >
+                                Một số dự án mình từng làm: <br>
+                                <li>Life on web user</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div id="contact--me" class="content--card">
-                    Contact me
-                </div>
-            </main>
-            <footer class="main__footer">
 
-            </footer>
-        </div>
+                <div class="container-card book">
+                    <div class="col-4 skill__items show--up-hard delay-03 page">
+                        <div class="icon_skill  page__1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
+                                style="fill: #d70230;">
+                                <path d="M10.483 12.482h3.034L12 8.831z"></path>
+                                <path
+                                    d="M12 3.074 3.689 6.038l1.268 10.987 7.043 3.9 7.043-3.9 1.268-10.987L12 3.074zm5.187 13.621H15.25l-1.045-2.606h-4.41L8.75 16.695H6.813L12 5.047l5.187 11.648z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div class="icon_skill page__2">
+                            <ul style="padding: 20px 20px" >
+                                Một số dự án mình từng làm: <br>
+                                <li>OMN-er</li>
+                                <li>OMN-net</li>
+                                <li>OMN-admin</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- <div id="contact--me" class="content--card contract--me-card" style="font-size: 100px;color: white; opacity: 0.4;">
+      
+            </div> -->
+        </main>
+        <!-- <footer class="main__footer">
+
+        </footer> -->
+    </div>
     <script type="module" src="main.js"></script>
 </body>
 
