--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         </footer> -->
     </div>
-    <script type="module" src="main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
