--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
             <div id="skill" class="content--card item-skill-scroll">
-                <div class="container-card book">
+                <div class="col-3 container-card book">
                     <div class="col-4 skill__items show--up-hard delay-01 page">
                         <div class="icon_skill page__1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="container-card book">
+                <div class="col-3 container-card book">
                     <div class="col-4 skill__items show--up-hard delay-02 page">
                         <div class="icon_skill  page__1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
@@ -142,7 +142,7 @@
                     </div>
                 </div>
 
-                <div class="container-card book">
+                <div class="col-3  container-card book">
                     <div class="col-4 skill__items show--up-hard delay-03 page">
                         <div class="icon_skill  page__1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
