--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./src/styles/base.css">
     <link rel="stylesheet" href="./src/styles/style.css">
     <link rel="stylesheet" href="./src/styles/card_style.css">
+    <link rel="stylesheet" href="./src/styles/responsive.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -165,6 +166,27 @@
         </main>
         <!-- <footer class="main__footer">
         </footer> -->
+        <div class="menu__mobile" id="myMenu">
+            <div class="sub__main--header-mobile">
+                <div class="menu__footer-mobile">
+                    <a href="#introduce">
+                        <span class="header__navbar--text">
+                            Introduce
+                        </span>
+                    </a>
+                    <a href="#skill">
+                        <span class="header__navbar--text">
+                            Skill
+                        </span>
+                    </a>
+                    <a href="#contact--me">
+                        <span class="header__navbar--text">
+                            Contact me
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./JS/main.js"></script>
 </body>
