--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
                     <div class="item1-scroll content__introduce col-3">
                         <span class="show--down delay-02 text-large-size text-primary">Xin chào !!!</span>
                         <br>
-                        <span class="show--left delay-02 text-medium-size text-white tl pr">Mình là Phạm Thanh Duy, lập
-                            trình viên chuyên
-                            về fontend !!!</span>
+                        <span class="show--left delay-02 text-medium-size text-white tl pr">Con cẹt nè Đức :)))))</span>
                     </div>
                     <div class="item1-scroll contend__img col-3">
                         <img class="show--up delay-02 avatar__img" src="./src/imgs/avatar.jpg" alt="Girl in a jacket">
