--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </main>
         <!-- <footer class="main__footer">
         </footer> -->
-        <div class="menu__mobile" id="myMenu">
+        <!-- <div class="menu__mobile" id="myMenu">
             <div class="sub__main--header-mobile">
                 <div class="menu__footer-mobile">
                     <a href="#introduce">
@@ -184,7 +184,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="./JS/main.js"></script>
 </body>
