--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             </div>
 
             <div id="skill" class="content--card item-skill-scroll">
-
-                <div class="col-3 container-card book">
+                <div class="col-3 container-card book" onclick="handleShowContent(event, 0)">
                     <div class="col-4 skill__items show--up-hard delay-01 page">
                         <div class="icon_skill page__1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
@@ -122,7 +121,7 @@
                     </div>
                 </div>
 
-                <div class="col-3 container-card book">
+                <div class="col-3 container-card book" onclick="handleShowContent(event, 1)">
                     <div class="col-4 skill__items show--up-hard delay-02 page">
                         <div class="icon_skill  page__1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
@@ -141,7 +140,7 @@
                     </div>
                 </div>
 
-                <div class="col-3 container-card book">
+                <div class="col-3 container-card book" onclick="handleShowContent(event, 2)">
                     <div class="col-4 skill__items show--up-hard delay-03 page">
                         <div class="icon_skill  page__1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="124" height="124" viewBox="0 0 24 24"
